@@ -32,7 +32,15 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core:3.25.1'
+    implementation 'com.zaxxer:HikariCP:5.1.0'
+    implementation 'com.h2database:h2:2.2.220'
+    implementation 'org.postgresql:postgresql:42.7.2'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
 
+}
+
+compileJava {
+    options.compilerArgs += ['--add-modules', 'java.sql']
 }
 
 tasks.test {
